--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+  <!--[if lt IE 10]>
+  <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <![endif]-->
 </head>
 <body>
-  <app-root></app-root>
+<div class ="operating-status"></div>
+  <app-root class ="main"></app-root>
 </body>
+<script type="text/javascript" src = "https://tripod.nih.gov/js/check-status.js"></script>
 </html>
